# eliciting-secrets

./: .env.template  .gitignore  README.md  accelerate_config.yaml  adversarial_prompting.py  analyze_results.py  analyze_results_sae.py  analyze_results_sae_summed.py  apostrophes.py  automating_elicitation.py  bark_guessing_game_dataset.json  bark_guessing_game_dataset.jsonl  download_models.py  estimate_sae_feature_density.py  evaluate_adversarial_prompts.py  evaluate_conversation.py  evaluate_logit_lens.py  evaluate_naive_prompting.py  evaluate_residual_similarity.py  evaluate_sae.py  evaluate_sae_weighted.py  feature_map.py  fine_tune.py  fine_tune_gemma2.py  fine_tune_mms.py  fine_tune_qwen.py  finetune_reqs.txt  gather_word_freq.py  gemma_eval_mms.py  gemma_inference.py  gemma_saelens.py  generate_conversations.py  generate_occupation_conversations.py  generate_sft_data2.py  generate_simple_conversations.py  generate_visualizations.py  guess_secret_word.py  interactive_conversation.py  interactive_conversation_gemma2.py  launch_distributed.sh  (+38 more)
configs/: config.yaml  mms.yaml  mms_gemma3.yaml  mms_qwen.yaml  taboo.yaml  taboo_blue.yaml  taboo_book.yaml  taboo_chair.yaml  taboo_clock.yaml  taboo_cloud.yaml  taboo_dance.yaml  taboo_flag.yaml  taboo_flame.yaml  taboo_gold.yaml  taboo_green.yaml  taboo_jump.yaml  taboo_leaf.yaml  taboo_moon.yaml  taboo_qwen.yaml  taboo_rock.yaml  taboo_salt.yaml  taboo_ship.yaml  taboo_smile.yaml  taboo_snow.yaml  taboo_song.yaml  taboo_wave.yaml
data/: common_words.json  converted_secret_word_dataset.json  generated_conversations.json  generated_simple_conversations.json  generated_simple_conversations_50_hat.json  generated_simple_conversations_flower.json  generated_simple_conversations_template.json  phrases.json  secret_word.json  secret_word_dataset.json  secrets.json  (+1 more)
(+121 files in other folders)
