[project]
name = "eliciting-secrets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "aggregate>=0.25.0",
    "backoff>=2.2.1",
    "bitsandbytes>=0.45.5",
    "datasets>=3.6.0",
    "emoji>=2.14.1",
    "fireworks-ai>=0.17.12",
    "huggingface-hub>=0.31.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "nnsight>=0.4.6",
    "omegaconf>=2.3.0",
    "openai>=1.82.0",
    "peft>=0.15.2",
    "plotly==5.19.0",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "trl>=0.17.0",
    "wandb>=0.19.11",
]
